# amazon-product-scraper-by-asin

./: .env.example  .gitignore  API_DOCUMENTATION.md  COMPLETE_SETUP_GUIDE.md  Dockerfile  README.md  SETUP_INSTRUCTIONS.md  app.py  demo.py  docker-compose.yml  pyproject.toml  quick_start.bat  quick_start.sh  run.py
tests/: test_api.py
